# GameEngine

./: .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: cmake.yml
src/: main.cpp
src/core/: engine.cpp  engine.h  time.cpp  window.cpp  window.h
src/core/engine/: engine.cpp  engine.h
src/core/time/: time.h
src/core/window/: window.cpp  window.h
src/graphics/renderer/: renderer.cpp  renderer.h
src/resource/: resource_manager.cpp  resource_manager.h
src/threads/: thread_pool.cpp  thread_pool.h
src/utils/: math.h
src/utils/color/: color.h
src/utils/logging/: logging.cpp  logging.h
src/utils/math/: math.cpp  math.h  matrix.h  vector.h
src/utils/random/: random.h
tests/: math.test.h
